src/objects/VPM_PaymentMethods__mdt.object
<CustomObject>
    <description>VPM- This custom metadata type hold payment method according to company code objects company code and country.</description>
    <fields>
        <fullName>VPM_CountryISO2__c</fullName>
        <description>VPM - It is  used to lookup to exact country code from commodity and custom setting to populate payment method default data.</description>
        <label>Country ISO2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_Country__c</fullName>
        <description>VPM- Stores the country value</description>
        <label>Country</label>
        <length>52</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_PaymentMethod__c</fullName>
        <description>VPM -  Used to store the Payment Method values</description>
        <label>Payment Method</label>
        <length>52</length>
        <type>Text</type>
    </fields>
    <label>Payment Method</label>
    <pluralLabel>Payment Methods</pluralLabel>
</CustomObject>